--- a/css/index.css
+++ b/css/index.css
@@ -66,6 +66,15 @@ p {
     line-height: 1.4;
 }
 
+.header{
+    width: 60%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px 2%;
+    font-size: 14px;
+}
+
 .container {
     width: 800px;
     margin: 0 auto;
